<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/dialog_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#4e92df"
            android:paddingStart="0dp"
            android:paddingEnd="16dp"
            app:menu="@menu/create_dialog_menu"
            app:navigationIcon="@drawable/ic_baseline_close_24"
            app:navigationIconTint="@color/white"
            app:title="Créer une réunion"
            app:titleMargin="0dp"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_subject"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconContentDescription="Subject icon"
                app:startIconDrawable="@drawable/ic_baseline_subject_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_subject_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/subject_input_hint"
                    android:inputType="textAutoCorrect"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_room"
                style="@style/AppTheme.AutoCompleteTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="8dp"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_subject"
                app:startIconContentDescription="Location icon"
                app:startIconDrawable="@drawable/ic_baseline_location_on_24">

                <AutoCompleteTextView
                    android:id="@+id/input_room_autoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/input_room_hint"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/create_input_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_room"
                app:startIconContentDescription="Date icon"
                app:startIconDrawable="@drawable/ic_baseline_date_range_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/create_input_date_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/input_date_hint"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/input_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="8dp"
                app:divider="@drawable/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_input_date"
                app:showDividers="middle">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/create_input_start"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:startIconContentDescription="Time icon"
                    app:startIconDrawable="@drawable/ic_baseline_access_time_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/create_input_start_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/input_start_hint"
                        android:inputType="time" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/create_input_end"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:startIconContentDescription="Time icon"
                    app:startIconDrawable="@drawable/ic_baseline_access_time_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/create_input_end_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/input_end_hint"
                        android:inputType="time" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_participants"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="8dp"
                app:endIconContentDescription="Add participant"
                app:endIconDrawable="@drawable/ic_baseline_add_circle_outline_24"
                app:endIconMode="custom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_time"
                app:startIconContentDescription="Participants icon"
                app:startIconDrawable="@drawable/ic_baseline_people_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_participants_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_participants_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress|textAutoCorrect"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <HorizontalScrollView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="8dp"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_participants">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/participants_chip_group"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:singleLine="true" />
            </HorizontalScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>